testsuite/tests/explicit-dicts/should_fail/Incoherence2.stderr

Incoherence2.hs:9:12: error: [-Wincoherence (in -Wdefault), -Werror=incoherence]
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of possible incoherence:
        Through an ancestor: ‘Eq a’ occurs in the context
    • In the expression: foo ((dict :: Ord a))
      In an equation for ‘bar’: bar dict = foo ((dict :: Ord a))
